--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,23 @@
+
 <!DOCTYPE html>
-<html lang="en">
+
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home page</title>
 </head>
 <body>
      <h1>Home Page</h1>
+     <form action="addProgrammer">
+         <h3>Enter Programmers</h3>
+         <input type="text" name="pId">
+         <h3>Enter Programmers Name</h3>
+         <input type="text" name="name">
+         <h3>Enter Programmers Language</h3>
+         <input type="text" name="language">
+         <button type="submit">Add Programmer</button>
+     </form>
 </body>
 </html>
