--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,13 +10,13 @@
 </head>
 <body>
      <h1>Home Page</h1>
-     <form action="addProgrammer">
+     <form action="addProgrammer" method="POST">
          <h3>Enter Programmers</h3>
          <input type="text" name="pId">
          <h3>Enter Programmers Name</h3>
-         <input type="text" name="name">
+         <input type="text" name="pName">
          <h3>Enter Programmers Language</h3>
-         <input type="text" name="language">
+         <input type="text" name="pLanguage">
          <button type="submit">Add Programmer</button>
      </form>
 </body>
