--- a/src/main/resources/templates/programmerInfo.html
+++ b/src/main/resources/templates/programmerInfo.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Programmer Info</title>
 </head>
 <body>
-
+    <h1>Programmer Info</h1>
+    <h3 th:text="${programmer.pId}"></h3>
+    <h3 th:text="${programmer.pName}"></h3>
+    <h3 th:text="${programmer.pLanguage}"></h3>
 </body>
 </html>
